--- a/style.css
+++ b/style.css
@@ -66,6 +66,20 @@ p {
 }
 
 /* Customization Panel */
+
+.icon {
+    height: 10vh;
+    margin-top: 10%;
+    margin-bottom: -5%;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 #customization-panel {
     width: 15vw;
     height: 100%;
@@ -128,13 +142,8 @@ p {
 /* Remove default styles from <a> */
 a {
     text-decoration: none;
-    /* Remove underline */
     color: inherit;
-    /* Inherit text color from parent */
-    display: block;
-    /* Ensure <a> takes up full width */
     width: 100%;
-    /* Make <a> span the full width */
 }
 
 
